--- a/package.json
+++ b/package.json
@@ -106,4 +106,12 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
   }
+  {
+  "scripts": {
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "start": "NODE_ENV=production node dist/index.js",
+    "seed": "tsx server/seed.ts"
+  }
+}
+
 }
